[package]
name = "cnccoder"
authors = ["Fredrik Söderström <tirithen@gmail.com>"]
description = "A library for generating gcode operations targeted for cnc machines, and also generates camotics projects for simulation"
license = "GPLv2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
lazy_static = "1"

[dev-dependencies]
common_macros = "0.1"

[profile.release]
opt-level = 's'
lto = true

[features]
filesystem = []